Doing some cleanup + Partial Code Block Highlighting

--- a/src/app/blog/(posts)/0002/page.mdx
+++ b/src/app/blog/(posts)/0002/page.mdx
@@ -1,13 +1,11 @@
-import Image from 'next/image';
-import exceptionStylesExample from './exceptionstyleexamples.png';
-import seeminglyhighcouplingexample from './seeminglyhighcouplingexample.png';
-
 ---
 title: "From the Archives - Reasoning about Linter Design"
 excerpt: "A preview of my thought process with implementing program analysis tools circa 2022"
 date: "2020-03-16T05:35:07.322Z"
 author: Alex Westerman
 ---
+
+import Image from 'next/image';
 
 # From the Archives - Reasoning about Linter Design
 
@@ -210,8 +208,10 @@ This is great! ASM already does the work needed to separate throws declarations 
 
 While the analyzer is going to be implemented as a `DomainAnalyzer` in the context of the architecture, there needs to be a way to test the singluar unit of exception analysis against various cases. Moreover, I've generated the following cases that should either be compliant or non-compliant with the linter's rules:
 
+import exceptionStylesExample from './exceptionstyleexamples.png';
+
 <div>
-<Image src={exceptionStylesExample} width={738} height={831} className='mx-auto mb-4'/>
+<Image src={exceptionStylesExample} alt="A bunch of examples" width={738} height={831} className='mx-auto mb-4'/>
 </div>
 
 In practice, these method names are really excessive, but they effectively describe what each example is supposed to represent. Overall, there are 7 types of speicific violations that this linter will support, which are defined in an enum of`ExceptionThrownAnalyzer.java`:
@@ -250,8 +250,11 @@ Class coupling by definition is pretty straightforward: the more dependendent a 
 
 Another thing to consider is what type of unique classes to include in the coupling count. A good reason for this consideration is because the use of fundamental classes (such as those defining primitive classes) could inflate those numbers to indicate that the class or module is less maintainable than it actually is. [Visual Studio's Code Metrics](https://docs.microsoft.com/en-us/visualstudio/code-quality/code-metrics-class-coupling?view=vs-2022) doesn't include C# primitive types such as `string`, `int`, `boolean`, however it does count those provided by the .NET framework.
 
+
+import seeminglyhighcouplingexample from './seeminglyhighcouplingexample.png';
+
 <div>
-<Image src={seeminglyhighcouplingexample} width={806} height={520} className='mx-auto mb-4'/>
+<Image src={seeminglyhighcouplingexample} alt="Is this high coupling??" width={806} height={520} className='mx-auto mb-4'/>
 </div>
 
 
@@ -379,9 +382,9 @@ Below is an updated class diagram focused mainly on the presentation layer and t
 import presentationLayer from './PresentationLayer.png';
 
 <div>
-<Image src={presentationLayer} width={910} height={1044} className='mx-auto mb-4'/>
+<Image src={presentationLayer} alt="Presentation Layer UML" width={910} height={1044} className='mx-auto mb-4'/>
 </div>
-{/* ![presentationlayer](PresentationLayer.png) */}
+
 
 Overall it is a very light facade-like design that follows many of the principles of the Three Layers architecture. However, I chose a separation between the presentation layer and a bootstrap class because of the following reasons:
 
@@ -406,16 +409,22 @@ THe primary purpose of the strategy is to allow for a class to select algorithms
 import basicStrategy from './BasicStrategy.png';
 
 <div>
-<Image src={basicStrategy} width={380} height={381} className='mx-auto mb-4'/>
+<Image src={basicStrategy} alt="Basic Strategy Pattern UML" width={380} height={381} className='mx-auto mb-4'/>
 </div>
 
 
 The above UML class diagram depicts a very simple strategy pattern with two possible concrete versions of the abstract `strategyMethod()` that is called in `SomeObject`'s `doSomethingUsingStrategy()`. The strategy for SomeObject is determined upon construction and composes the strategy as a field that is typed by `StrategyType`. Therefore by polymorphism, because all concrete methods implement `StrategyType`, `SomeObject` will always be able to execute `strategy.strategyMethod()` due to this constraint required for implementing an interface.
 
 However, strategy pattern can be used multiple times, whether it be the same or different types of strategies. Consider the following class diagrams:
-{/*
-| ![multi-strategy1](MultiStrategyType.png) | ![multi-strategy2](MultiSameStrategyType.png) |
-|:-------------------------------------------:|:-----------------------------------------------:| */}
+
+import multiSameStrategyType from './MultiSameStrategyType.png';
+import multiStrategyType from './MultiStrategyType.png';
+
+<div className='lg:flex lg:mx-auto mb-4'>
+<Image src={multiStrategyType} alt="Wait what?" width={830} height={436} className='mx-auto mb-4 lg:mb-0'/>
+<Image src={multiSameStrategyType} alt="This too?" width={380} height={408} className='mx-auto'/>
+</div>
+
 
 Both UML diagrams demonstrate a strategy pattern inherently, but the left diagram composes different types of strategies and the right diagram composes multiple of the same types of strategies. These properties are not mutually exclusive, therefore we should probably split the search of the necessary information as follows:
 
@@ -432,7 +441,11 @@ This seems pretty robust for determining what is a strategy pattern, except ther
 
 Suppose we have the following UML Class diagram:
 
-{/* ![final class](StrategyMethodCallsOnly.png) */}
+import strategyMethodCallsOnly from './StrategyMethodCallsOnly.png';
+
+<div>
+<Image src={strategyMethodCallsOnly} alt="Surely this isn't a strategy pattern" width={380} height={381} className='mx-auto mb-4'/>
+</div>
 
 Given that this is a `final` class, there are couple of interesting attributes that it will exhibit. The private constructor and static instatiation by the VM means that it is not good practice to let such an object have fields, thus this practice is done for utility classes that have methods that should not be overidden. In order for any method in this class to run, they are `static`ly declared and therfore must operate based on the parameter inputs it receives. But the question now becomes if the method _uses a `StrategyType` object_ as one of its parameters (among others), is that still implementing the strategy pattern?
 
@@ -444,11 +457,19 @@ I assert that while not always used (and alternative implementations acheiving t
 
 Enums are very interesting in Java given they can effectively operate as classes. Consider the following enum:
 
-{/* ![enumexample](ExampleEnum.png) */}
+import exampleEnum from './ExampleEnum.png';
+
+<div>
+<Image src={exampleEnum} alt='Example Enum Definition' width={402} height={314} className='mx-auto mb-4'/>
+</div>
 
 If you notice the abstract override of `toString()` in `ExampleEnumWithAbstractMethod`, this is actually allowed, but required every value in the enum to implement its own version. But now the question becomes how does Java compiles this? Well, it does it similar to this:
 
-{/* ![enumdecomp](ExampleEnumAsStrategy.png) */}
+import exampleEnumAsStrategy from './ExampleEnumAsStrategy.png';
+
+<div>
+<Image src={exampleEnumAsStrategy} alt='An Example Enum Implementing the Strategy Pattern' width={1053} height={422} className='mx-auto mb-4'/>
+</div>
 
 Java won't use the exact naming scheme, but it definitely complies it this way. In fact it seems all enums are compiled this way. In the `ExceptionThownAnalyzer`, I created the following enum within the `ExceptionThrownAnalyzer` class:
 
@@ -512,7 +533,11 @@ Java won't use the exact naming scheme, but it definitely complies it this way. 
 
 I ran it through ASM and analyzed the debug results, leaving me with pretty good confirmation of how I suspect it works:
 
-{/* ![decomp](enum_decomp.png) */}
+import enumDecomp from './enum_decomp.png';
+
+<div>
+<Image src={enumDecomp} alt="Confirming the results" width={735} height={290} className='mx-auto mb-4'/>
+</div>
 
 While not explicitly clear just from the list unless you analyze the `ClassNode` objects, the only base class (i.e. the only class without `$#` append) does have both the `ACC_ENUM` (`0x4000`) and `ACC_INTERFACE` (`0x0400`) access flags, while the others have only the `ACC_ENUM` flag, therefore indicating this is all related to the enum. Even the declared methods in the interface class have the `ACC_ABSTRACT` access flag, therefore recreating the exact pattern structure.
 
