"Fix" MDX Frontmatter parsing

--- a/src/app/blog/(posts)/0003/page.mdx
+++ b/src/app/blog/(posts)/0003/page.mdx
@@ -3,7 +3,7 @@ title: "Talking Cows, Perls, and Terminals"
 excerpt: "A really obscure set of rabbit holes to recreate an old piece of software"
 date: "2024-09-16"
 author: Alex Westerman
-slug: 0003
+slug: '0003'
 ---
 
 import Image from 'next/image';
