--- a/src/app/blog/(posts)/0004/page.mdx
+++ b/src/app/blog/(posts)/0004/page.mdx
@@ -1,7 +1,7 @@
 ---
 title: "I built a new computer :)"
 excerpt: "Why I decided to deprecate my Thinkpad"
-date: "2024-11-25"
+date: "2024-11-30"
 author: Alex Westerman
 slug: '0004'
 ---
@@ -14,9 +14,14 @@ _Why I decided to deprecate my Thinkpad_
 
 If you've checked out the [About](/about) section of my website, you'll see a couple of pictures of my setups, one in the basement of my childhood home during COVID and the other in my dorm at the senior year of college. Aside from the different locations, display configurations, and other knick-knacks, one thing remained constant: the Thinkpad.
 
-//Insert Thinkpad circle pictures.
+import thinkpadMentioned from './thinkpad_mentioned.webp';
 
-When I started college, my institution ([Rose-Hulman](#find the url dingus)) has you pay a fee freshman year for a laptop that comes with all of the school software but is otherwise yours to keep. Their choice for that year (and the next couple of years from what I could gather), was the [Thinkpad P1 (Gen 1)](# Also find the link dingus). At the time, this was when the [Nvidia Geforce RTX 2000 series refresh](https://en.wikipedia.org/wiki/GeForce_20_series) was happening, Intel released [10th Gen Comet Lake processors](https://en.wikipedia.org/wiki/Comet_Lake) but was losing ground to AMD with the improvements in [2nd Generation Ryzen processors on Zen 2](https://en.wikipedia.org/wiki/Zen_2); Apple was still developing their [Apple Silicon](https://en.wikipedia.org/wiki/Apple_M1) which would be announced the next year and change the computing landscape with it's shift to [ARM](https://en.wikipedia.org/wiki/AArch64#ARMv8.4-A)/[RISC-based](https://en.wikipedia.org/wiki/Reduced_instruction_set_computer) computing. Also, this was before Windows 11 and mainstream "AI/ML" products and the surge in minimum computer requirements. I could continue framing the history and landscape of this time but this gives a fairly broad picture.
+<div className="text-center">
+<Image src={thinkpadMentioned} alt="THINKPAD MENTIONED!!!!!" width={3600} height={2400} className='mx-auto mb-4'/>
+<em>THINKPAD MENTIONED!!!!!</em>
+</div>
+
+When I started college, my institution ([Rose-Hulman](https://www.rose-hulman.edu/index.html)) has you pay a fee freshman year for a laptop that comes with all of the school software but is otherwise yours to keep. Their choice for that year (and the next couple of years from what I could gather), was the **Thinkpad P1 (Gen 1)**. At the time, this was when the [Nvidia Geforce RTX 2000 series refresh](https://en.wikipedia.org/wiki/GeForce_20_series) was happening, Intel released [10th Gen Comet Lake processors](https://en.wikipedia.org/wiki/Comet_Lake) but was losing ground to AMD with the improvements in [2nd Generation Ryzen processors on Zen 2](https://en.wikipedia.org/wiki/Zen_2); Apple was still developing their [Apple Silicon](https://en.wikipedia.org/wiki/Apple_M1) which would be announced the next year and change the computing landscape with it's shift to [ARM](https://en.wikipedia.org/wiki/AArch64#ARMv8.4-A)/[RISC-based](https://en.wikipedia.org/wiki/Reduced_instruction_set_computer) computing. Also, this was before Windows 11 and mainstream "AI/ML" products and the surge in minimum computer requirements. I could continue framing the history and landscape of this time but this gives a fairly broad picture.
 
 The nice thing about [Thinkpads](https://en.wikipedia.org/wiki/ThinkPad) is that they are designed for enterprises which need more compute or reliability. This comes with many advantages ranging from choice of reliable/high-performance parts, ease of repairability (compared to most consumer laptops), and dedicated warranty plans for businesses (if you buy it, but the laptop fee included a 4 year accidental damage plan which I had to use a lot). However, not all Thinkpads are made equal and it really depends on what a company/administrator is looking for when they want to deploy thousands of laptops to people that need them. Here is what my Thinkpad Model was configured with:
 
@@ -26,7 +31,13 @@ The nice thing about [Thinkpads](https://en.wikipedia.org/wiki/ThinkPad) is that
 - 500 GB NVMe SSD
 - Windows 10 Enterprise (This is important)
 
-//Insert pictures of the thinkpad with captions
+
+import thinkpadLid from './thinkpad_lid.webp';
+
+<div className='text-center'>
+<Image src={thinkpadLid} alt="The lid of my Thinkpad" width={5712} height={4284} className='mx-auto mb-4'/>
+<em>_The lid of the Thinkpad. With all the stickers it accumulated_</em>
+</div>
 
 For what it's worth, it is a pretty good computer for the time and what is expected for engineering students to need: Above-average processing power and discrete graphics with an increase compute focus (the Quadro/RTX are known for this). Some pain points like the RAM and SSD were there but that was more of a me thing; I ended up adding a [Seagate FireCuda 510 2TB SSD](https://www.seagate.com/support/internal-hard-drives/ssd/firecuda-ssd/) and making that my main boot drive, otherwise I basically relied on the [Windows page file](https://learn.microsoft.com/en-us/troubleshoot/windows-client/performance/introduction-to-the-page-file) if I ever ran out of memory (which is often). Aside from the school software, SDKs, toolchains, and VMs I had running on this, I also played (so many) video games on it. I mean have you seen my Steam library?
 
@@ -60,6 +71,13 @@ So I set a budget of $2000 USD and started making lists on [PCPartPicker](https:
 
 Here is a copy of the build on PCPartPicker for more details about the parts I used: https://pcpartpicker.com/user/FaceFTW/saved/#view=Dnmgzy
 
+import mySonGPU from './my_son.webp';
+
+<div className='text-center'>
+<Image src={mySonGPU} alt="my son :)" width={4284} height={5712} className='mx-auto mb-4'/>
+<em>my son :)</em>
+</div>
+
 Couple of interesting factors about this build
 - I wanted something small and quiet.
   - I didn't want to do a full blown ITX build for my first build since I knew it would be a massive pain overall with the tight clearances and planning.
@@ -71,13 +89,24 @@ Couple of interesting factors about this build
 
 Here are pictures of the final build! I'm excluding a formal setup picture since I'm still adusting things around, plus it's temporary while I save for an apartment.
 
-//pics
+import buildInside from './build_inside.webp';
+import buildFront from './build_front.webp';
+
+<div className='text-center'>
+<Image src={buildInside} alt="Inside of the computer" width={5712} height={4284} className='mx-auto'/>
+<Image src={buildFront} alt="Front of the computer" width={5712} height={4284} className='mx-auto'/>
+<em>Please ignore the rat's nest. Also I can't believe they just give metal emblems with some of these things.</em>
+</div>
 
 And the benchmarks? Well I ran a bunch of [3DMark](https://www.3dmark.com) tests and I'm very happy with the higher numbers. Plus, I only heard the CPU fan spin up when under a reasonable load.
 
-//more pics
 
+import threeDMark from './3dmark.webp';
 
+<div className='text-center'>
+<Image src={threeDMark} alt="3DMark Scores" width={607} height={916} className='mx-auto mb-4'/>
+<em>The numbers Mason. They actually mean something.</em>
+</div>
 
 
 
