--- a/src/app/blog/(posts)/0004/page.mdx
+++ b/src/app/blog/(posts)/0004/page.mdx
@@ -56,7 +56,7 @@ It's been five years. While ThinkPads can last longer than that, I think I need 
 
 ## Pulling the trigger
 
-I'll be honest, I was going to wait at least one more year before I chose to replace the ThinkPad. But then _(a major political event)[https://en.wikipedia.org/wiki/2024_United_States_presidential_election]_ happened and suddenly questions about increasing costs in all points of life arose, especially computer parts. According to the [International Trade Center](https://www.intracen.org) (ITC), [the US only accounted for 4.5% of Semiconductor exports in 2023 (not including domestic sales), whereas China + Taiwan accounted for ~51% of exports (also not including domestic sales)](https://www.trademap.org/Country_SelProduct.aspx?nvpm=1%7c%7c%7c%7c%7c8542%7c%7c%7c4%7c1%7c1%7c2%7c1%7c1%7c2%7c1%7c1%7c1). And with the inflammatory rhetoric around trade and [tariffs](https://en.wikipedia.org/wiki/Tariff) you can't tell what is going to skyrocket in price until you need it. I could be a worry-wart about this (diagnosed OCD/anxiety here) but I decided I rather bite the bullet now than tank a shotgun slug later.
+I'll be honest, I was going to wait at least one more year before I chose to replace the ThinkPad. But then _[a major political event](https://en.wikipedia.org/wiki/2024_United_States_presidential_election)_ happened and suddenly questions about increasing costs in all points of life arose, especially computer parts. According to the [International Trade Center](https://www.intracen.org) (ITC), [the US only accounted for 4.5% of Semiconductor exports in 2023 (not including domestic sales), whereas China + Taiwan accounted for ~51% of exports (also not including domestic sales)](https://www.trademap.org/Country_SelProduct.aspx?nvpm=1%7c%7c%7c%7c%7c8542%7c%7c%7c4%7c1%7c1%7c2%7c1%7c1%7c2%7c1%7c1%7c1). And with the inflammatory rhetoric around trade and [tariffs](https://en.wikipedia.org/wiki/Tariff) you can't tell what is going to skyrocket in price until you need it. I could be a worry-wart about this (diagnosed OCD/anxiety here) but I decided I rather bite the bullet now than tank a shotgun slug later.
 
 So I set a budget of $2000 USD and started making lists on [PCPartPicker](https://pcpartpicker.com). It didn't take long to generate what effectively was this final list (I worked with someone at [Micro Center](https://www.microcenter.com/) to adjust for better deals at the time):
 
@@ -65,7 +65,7 @@ So I set a budget of $2000 USD and started making lists on [PCPartPicker](https:
 - Cooler: Noctua NH-U12S (chromax.black)
 - MB: Asus TUF Gaming B650M-PLUS Wifi (mATX AM5)
 - Memory: TeamGroup T-Create Expert 2x16GB DDR5 6000 MT/s CL-30
-- Storage: SK Hynix Platnium P41 - 2TB PCIe 4.0 (4 Lane)
+- Storage: SK Hynix Platinum P41 - 2TB PCIe 4.0 (4 Lane)
 - GPU: Asus PRIME OC Geforce RTX 4070 SUPER - 12GB VRAM
 - PSU: Seasonic VERTEX PX-1000 (1000W, 80+ Platinum)
 
@@ -81,13 +81,13 @@ import mySonGPU from './my_son.webp';
 Couple of interesting factors about this build
 - I wanted something small and quiet.
   - I didn't want to do a full blown ITX build for my first build since I knew it would be a massive pain overall with the tight clearances and planning.
-  - Noctua fans are always the best when it comes to cooling while remaining quiet, so it was a no brainer pick.
+  - Noctua fans are always the best when it comes to cooling while remaining quiet, so it was a no-brainer pick.
   - Quiet also means the minimum amount of RGB possible. By avoiding RGB the parts have reduced costs and have one less point of failure; also don't have to worry about configuring all the parts to work together.
 - Parts are not the top-echelon but are still competitive
-  - The main usecases I have are software development, gaming, and the occasional CAD/3D modeling for 3D Printing. More CPU cores and the Ryzen's overall dominance in multi-threading made the most sense overall.
+  - The main use cases I have are software development, gaming, and the occasional CAD/3D modeling for 3D Printing. More CPU cores and the Ryzen's overall dominance in multi-threading made the most sense overall.
   - I chose the 4070 SUPER is primarily budget and also use-case related. I still only use 1080p monitors that cap out at 75Hz refresh rate and have no intention to upgrade that soon, so I don't need all that raw graphics power just to play a game.
 
-Here are pictures of the final build! I'm excluding a formal setup picture since I'm still adusting things around, plus it's temporary while I save for an apartment.
+Here are pictures of the final build! I'm excluding a formal setup picture since I'm still adjusting things around, plus it's temporary while I save for an apartment.
 
 import buildInside from './build_inside.webp';
 import buildFront from './build_front.webp';
